[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
]

[project]
name = "prometheus-aioexporter"
description = "Asyncio library for creating Prometheus exporters"
readme = "README.rst"
keywords = [
  "exporter",
  "library",
  "prometheus",
]
license = {file = "LICENSE.txt"}
maintainers = [
    {name = "Alberto Donato", email = "alberto.donato@gmail.com"},
]
authors = [
    {name = "Alberto Donato", email = "alberto.donato@gmail.com"},
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = [
  "version",
]
dependencies = [
  "aiohttp>=3",
  "prometheus-client>=0.4",
  "toolrack>=2.1",
]
[project.optional-dependencies]
testing = [
  "pytest",
  "pytest-aiohttp",
  "pytest-asyncio",
  "pytest-mock",
]
[project.urls]
changelog = "https://github.com/albertodonato/prometheus-aioexporter/blob/main/CHANGES.rst"
homepage = "https://github.com/albertodonato/prometheus-aioexporter"
repository = "https://github.com/albertodonato/prometheus-aioexporter"
[project.scripts]
prometheus-aioexporter-sample = "prometheus_aioexporter.sample:script"

[tool.setuptools.dynamic]
version = {attr = "prometheus_aioexporter.__version__"}

[tool.setuptools.packages.find]
include = ["prometheus_aioexporter*"]

[tool.isort]
combine_as_imports = true
force_grid_wrap = 2
force_sort_within_sections = true
from_first = false
include_trailing_comma = true
multi_line_output = 3
order_by_type = false
use_parentheses = true

[tool.flake8]
ignore = ["E203", "E501", "W503"]
max-line-length = 80
select = ["C", "E", "F", "W", "B", "B950"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.report]
fail_under = 100.0
show_missing = true
skip_covered = true

[tool.coverage.run]
source = ["prometheus_aioexporter"]
omit = ["prometheus_aioexporter/sample.py"]

[tool.mypy]
ignore_missing_imports = true
install_types = true
non_interactive = true
strict = true
