[metadata]
name = prometheus-aioexporter
version = 1.6.4
license = LGPLv3+
description = Asyncio library for creating Prometheus exporters
long_description = file: README.rst
author = Alberto Donato
author_email = alberto.donato@gmail.com
maintainer = Alberto Donato
maintainer_email = alberto.donato@gmail.com
url = https://github.com/albertodonato/prometheus-aioexporter
keywords = prometheus, exporter, library
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Programming Language :: Python :: 3
    Topic :: Utilities
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >= 3.8
install_requires =
    aiohttp >= 3.0.0
    prometheus-client >= 0.4.0
    toolrack >= 2.1.0

packages = find:
include_package_data = True

[options.packages.find]
include =
    prometheus_aioexporter
    prometheus_aioexporter.*

[options.extras_require]
testing =
    pytest
    pytest-aiohttp
    pytest-mock

[options.entry_points]
console_scripts =

[globals]
lint_files = setup.py prometheus_aioexporter

[flake8]
max-line-length = 80
select = C, E, F, W, B, B950
ignore = E203, E501, W503

[tox:tox]
skipsdist = True

[testenv]
deps =
    .
    .[testing]
commands =
    {envbindir}/pytest {posargs}

[testenv:format]
deps =
    black
    isort
commands =
    {envbindir}/isort {[globals]lint_files}
    {envbindir}/black -q {[globals]lint_files}

[testenv:lint]
deps =
    black
    flake8
    isort
commands =
    {envbindir}/isort --check-only --diff {[globals]lint_files}
    {envbindir}/black --check {[globals]lint_files}
    {envbindir}/flake8 {[globals]lint_files}

[testenv:check]
deps =
    mypy
commands =
    {envbindir}/mypy -p prometheus_aioexporter {posargs}

[testenv:coverage]
deps =
    .
    .[testing]
    pytest-cov
commands =
    {envbindir}/pytest --cov {posargs}
